<resources>
    <string name="app_name">Investment Gold Portfolio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_portfolio">Portfolio</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_add_new_item">Add New Item</string>
    <string name="menu_api_prices">Market Metal Prices</string>
    <string name="add_new_nugget_to_portfolio">Add new nugget to portfolio</string>
    <string name="title_portfolio">Portfolio</string>
    <string name="title_add">Add</string>
    <string name="title_market">Market</string>
    <string name="description_my_portfolio">My portfolio</string>
    <string name="description_add_new_item">Add new item</string>
    <string name="description_metal_prices">Metal prices</string>
    <string name="title_dark_theme">Dark theme</string>

    <string name="time_and_date">%1$s</string>
    <string name="metal">Metal</string>
    <string name="currency">Currency</string>
    <string name="weight">Weight</string>
    <string name="items_purchased">Units Purchased</string>
    <string name="item_price">Unit Price</string>

    <string name="metal_gold">Gold</string>
    <string name="metal_silver">Silver</string>
    <string name="metal_platinum">Platinum</string>
    <string name="metal_palladium">Palladium</string>

    <string name="currency_usd">USD</string>
    <string name="currency_eur">EUR</string>

    <string name="weight_gram">gram</string>
    <string name="weight_troy_ounce">troy ounce</string>

    <string name="network_error">Network error, please try again later!</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="button_save">Save</string>
    <string name="zero_value">0</string>
    <string name="total_purchase_price">Total Purchase Price:</string>
    <string name="total_weight">Total Weight:</string>
    <string name="current_market_value">Current Market Value:</string>
    <string name="total_profit">Total Profit:</string>

    <string name="total_weight_value">%1$s %2$s</string>
    <string name="price_holder">0</string>

    <string name="total_weight_holder">Weight purchased: %1$s %2$s</string>
    <string name="total_units_purchased_holder">Units purchased: %1$s</string>
    <string name="total_purchase_price_holder">Total price: %1$s</string>
    <string name="error_network_connection">No Internet Connection</string>
    <string name="error_not_all_data_entered">Please enter required data.</string>
    <string name="info_item_removed">Item removed successfully.</string>
    <string name="undo">UNDO</string>
    <string name="message_save_successfull">Item saved successfully</string>
    <!-- Preference Titles -->
    <string name="value_header">Default Values</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="currency_title">Default values</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>