<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/portfolio"
        android:icon="@drawable/ic_archive_24"
        android:title="@string/title_portfolio"
        android:contentDescription="@string/description_my_portfolio"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/add_new_item"
        android:icon="@drawable/ic_add_24"
        android:title="@string/title_add"
        android:contentDescription="@string/description_add_new_item"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/prices"
        android:icon="@drawable/ic_money_24"
        android:title="@string/title_prices"
        android:contentDescription="@string/description_metal_prices"
        app:showAsAction="ifRoom"/>
</menu>