<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AddNewItemFragment">

    <EditText
        android:id="@+id/edit_text_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_item_name">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu_metal"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:hint="@string/metal">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_view_metal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/metal"
                android:inputType="none"
                android:text="@string/metal_gold"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/edit_text_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:hint="@string/weight" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu_weight"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:hint="@string/weight">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_view_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="none"
                android:text="@string/weight_gram"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>