<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.PortfolioFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/portfolio_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/total_purchase_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_purchase_price"
            style="@style/portfolio_text_holder"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/total_weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_purchase_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_value"
            style="@style/portfolio_value_holder"
            app:layout_constraintBottom_toTopOf="@+id/total_weight_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_weight"
            style="@style/portfolio_text_holder"
            app:layout_constraintBottom_toTopOf="@+id/total_current_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_purchase_price" />

        <TextView
            android:id="@+id/total_weight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_value"
            style="@style/portfolio_value_holder"
            app:layout_constraintBottom_toTopOf="@+id/total_current_value_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/total_purchase_price_value" />

        <TextView
            android:id="@+id/total_current_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_current_value"
            style="@style/portfolio_text_holder"
            app:layout_constraintBottom_toTopOf="@+id/total_profit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_weight" />

        <TextView
            android:id="@+id/total_current_value_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_value"
            style="@style/portfolio_value_holder"
            app:layout_constraintBottom_toTopOf="@+id/total_profit_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/total_weight_value" />

        <TextView
            android:id="@+id/total_profit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_profit"
            style="@style/portfolio_text_holder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_current_value" />

        <TextView
            android:id="@+id/total_profit_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_value"
            style="@style/portfolio_value_holder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/total_current_value_value" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.64720196" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portfolio_data" />

    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
</androidx.constraintlayout.widget.ConstraintLayout>